[gd_scene load_steps=5 format=2]

[ext_resource path="res://resoure/root/root_short.tres" type="Texture" id=1]
[ext_resource path="res://node/mouse_root/mouse_root_short.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 0.01

[sub_resource type="CircleShape2D" id=2]
radius = 0.0

[node name="mouse_root_short" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 32, 0 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( -32, 0 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
